# portv2

./: LICENSE  package-lock.json  package.json
public/: alejandro2.glb
public/openglstuff/: CMakeLists.txt
public/openglstuff/libs/SDL2/SDL2-2.28.5/i686-w64-mingw32/include/SDL2/: SDL_audio.h  SDL_guid.h
public/openglstuff/src/: firstOne.cpp  firstOne.h  fragment.glsl
src/app/: globals.css  layout.tsx  page.tsx  snescontroller.avif
src/app/about/: page.tsx
src/app/clts/: page.tsx
src/app/components/: Alejandro.tsx  StarBackground.tsx
src/app/enc/: page.tsx
src/app/experience/: page.tsx
src/app/instructions/: page.tsx
src/app/materials/: page.tsx
src/app/projects/: page.tsx
src/app/proposal/: page.tsx
src/app/resumets/: page.tsx
